fix(composer): Show a scrollbar in the popout composer
Summary:
Fixes T1990

Change the ScrollRegion component so that you can optionally provide a getScrollbar prop that resolves to a ScrollRegion.Scrollbar component. This allows you to easily put the Scrollbar outside of the ScrollRegion if necessary.

Test Plan: Run tests

Reviewers: evan

Reviewed By: evan

Maniphest Tasks: T1990

Differential Revision: https://phab.nylas.com/D1665

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -44,20 +44,24 @@
   }
 
   .composer-content-wrap {
-    position: relative;
     z-index: 1;
-
-    width: 100%;
-    max-width: @compose-width;
-    margin: 0 auto;
     padding: 0;
-    padding-top: 5px;
-
     flex: 1;
     display: flex;
+    position: relative;
     flex-flow: column;
   }
 
+  .composer-centered {
+    display:flex;
+    position: relative;
+    flex-direction: column;
+    flex: 1;
+    width: 100%;
+    max-width: @compose-width;
+    margin: 0 auto;
+    margin-top:@spacing-standard;
+  }
   .text-actions {
     text-align: right;
     line-height: 1.4;
@@ -133,6 +137,10 @@
     }
   }
 
+  .compose-body-scroll {
+    position:initial;
+  }
+
   .compose-body {
     flex: 1;
     z-index: 1;
@@ -198,10 +206,6 @@ body.is-blurred .composer-inner-wrap .tokenizing-field .token {
   .composer-outer-wrap {
     width: 100%;
     height: 100%;
-  }
-
-  .composer-content-wrap {
-    margin-top: @spacing-standard;
   }
 
   .composer-inner-wrap {
